Got #episode h1 to hide on play event of video and fixed margins so pinterest button will appear on iOS.

--- a/css/style.css
+++ b/css/style.css
@@ -642,7 +642,7 @@ div[role=main] {
 
 #video-description .social.facebook {
 	width: 82px;
-	margin-right: 21px;
+	margin-right: 18px;
 }
 
 #video-description .social.pinterest  {
